# vllm-ascend

./: .clang-format  CMakeLists.txt
csrc/: build_aclnn.sh  torch_binding.cpp  torch_binding_meta.cpp
csrc/bgmv_expand/op_host/: bgmv_expand.cpp  bgmv_expand.h
csrc/bgmv_expand/op_kernel/: bgmv_expand_kernel.cpp  bgmv_expand_kernel.h
csrc/bgmv_shrink/op_host/: bgmv_shrink.cpp  bgmv_shrink.h
csrc/bgmv_shrink/op_kernel/: bgmv_shrink_kernel.cpp  bgmv_shrink_kernel.h
csrc/dispatch_ffn_combine/op_host/: CMakeLists.txt
csrc/dispatch_ffn_combine/op_kernel/: dispatch_ffn_combine.h
csrc/dispatch_ffn_combine/op_kernel/utils/: hccl_shmem.hpp
csrc/get_masked_input_and_mask/op_host/: get_masked_input_and_mask.cpp  get_masked_input_and_mask.h
csrc/get_masked_input_and_mask/op_kernel/: get_masked_input_and_mask_kernel.cpp  get_masked_input_and_mask_kernel.h
csrc/mla_preprocess/op_host/: mla_preprocess.cpp  mla_preprocess.h
csrc/mla_preprocess/op_kernel/: mla_preprocess_kernel.cpp  mla_preprocess_kernel.h
csrc/rotary_embedding/op_host/: rotary_embedding.cpp  rotary_embedding.h
csrc/rotary_embedding/op_kernel/: rotary_embedding_kernel.cpp  rotary_embedding_kernel.h
csrc/sgmv_expand/op_host/: sgmv_expand.cpp  sgmv_expand.h
csrc/sgmv_expand/op_kernel/: sgmv_expand_kernel.cpp  sgmv_expand_kernel.h
csrc/sgmv_shrink/op_host/: sgmv_shrink.cpp  sgmv_shrink.h
csrc/sgmv_shrink/op_kernel/: sgmv_shrink_kernel.cpp  sgmv_shrink_kernel.h
csrc/swap_blocks/op_host/: swap_blocks.cpp  swap_blocks.h
csrc/utils/: host_common.cpp  host_common.h  kernel_utils.h  types.h  utils.h
csrc/weak_ref_tensor/op_host/: weak_ref_tensor.cpp  weak_ref_tensor.h
vllm_ascend/: ascend_forward_context.py  utils.py
vllm_ascend/attention/: mla_v1.py
vllm_ascend/ops/fused_moe/: moe_comm_method.py
vllm_ascend/ops/triton/mamba/: causal_conv1d.py
vllm_ascend/quantization/: w8a8_dynamic.py
vllm_ascend/worker/: model_runner_v1.py
